// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input props: getTheme: width:100,margin:10, 1`] = `
.c0 {
  margin: 0.8333333333333334em;
  position: relative;
  display: inline-block;
}

.c1 {
  height: 32px;
  cursor: text;
  width: 8.333333333333334em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.4166666666666667em;
  padding-right: 2.0833333333333335em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c1:hover {
  border-color: #cccccc;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<span>
  <span
    className="sv c0"
  >
    <input
      className="c1"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      size="default"
      value=""
    />
  </span>
</span>
`;

exports[`Input props: null 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  height: 32px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c1:hover {
  border-color: #cccccc;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<span
  className="sv c0"
>
  <input
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    size="default"
    value=""
  />
</span>
`;

exports[`Input props: placeholder  1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  height: 32px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c1:hover {
  border-color: #cccccc;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<span
  className="sv c0"
>
  <input
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    placeholder="请填写内容"
    size="default"
    value=""
  />
</span>
`;

exports[`Input props: placeholder  2`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  height: 32px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c1:hover {
  border-color: #cccccc;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<span
  className="sv c0"
>
  <input
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    placeholder=""
    size="default"
    value=""
  />
</span>
`;

exports[`Input props: size 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  height: 28px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c1:hover {
  border-color: #cccccc;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<span
  className="sv c0"
>
  <input
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    size="small"
    value=""
  />
</span>
`;

exports[`Input props: size 2`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  height: 38px;
  cursor: text;
  width: 16.666666666666668em;
  border-radius: 4px;
  border: 1px solid #e8e8e8;
  line-height: 1.5;
  font-size: 1.2rem;
  display: inline-block;
  font-family: inherit;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  background-image: none;
  color: #333333;
  padding-left: 0.8333333333333334em;
  padding-right: 2.916666666666667em;
  outline: none;
  min-height: 100%;
  z-index: 1;
  position: relative;
}

.c1:hover {
  border-color: #cccccc;
}

.c1::-webkit-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::-moz-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:-ms-input-placeholder {
  color: rgba(0,0,0,0.25);
}

.c1::placeholder {
  color: rgba(0,0,0,0.25);
}

.c1:focus {
  border-color: #684fff;
  box-shadow: 0 0 6px rgba(104,79,255,0.2);
}

<span
  className="sv c0"
>
  <input
    className="c1"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    size="large"
    value=""
  />
</span>
`;
